Closed
Bug 1803960
Opened 2 years ago
Closed 2 years ago
Perma xperf: File '{profile}\credentialstate.sqlite' (normalized from 'C:\Users\task_167015197864427\AppData\Local\Temp\tmpjgm9vwg3\profile\credentialstate.sqlite') was accessed and we were not expecting it. when Gecko 109 merges to Beta on 2022-12-12
Categories
(Core :: DOM: Credential Management, defect, P2)
Tracking
()
VERIFIED
FIXED
109 Branch
Tracking | Status | |
---|---|---|
firefox-esr102 | --- | unaffected |
firefox107 | --- | unaffected |
firefox108 | --- | unaffected |
firefox109 | + | verified |
People
(Reporter: mlaza, Assigned: bvandersloot)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
[task 2022-12-04T12:36:20.329Z] 12:36:20 INFO - TEST-INFO | 1500: exit 0
[task 2022-12-04T12:36:21.889Z] 12:36:21 INFO - The trace you have just captured "Z:\task_167015197864427\build\test.etl.kernel" may contain personally identifiable information, including but not necessarily limited to paths to files accessed, paths to registry accessed and process names. Exact information depends on the events that were logged. Please be aware of this when sharing out this trace with other people.
[task 2022-12-04T12:36:21.900Z] 12:36:21 INFO - The trace you have just captured "Z:\task_167015197864427\build\test.etl.user" may contain personally identifiable information, including but not necessarily limited to paths to files accessed, paths to registry accessed and process names. Exact information depends on the events that were logged. Please be aware of this when sharing out this trace with other people.
[task 2022-12-04T12:36:53.706Z] 12:36:53 INFO - Merged Etl: test.etl
[task 2022-12-04T12:41:23.376Z] 12:41:23 INFO - TEST-UNEXPECTED-FAIL : xperf: File '{profile}\credentialstate.sqlite' (normalized from 'C:\Users\task_167015197864427\AppData\Local\Temp\tmpjgm9vwg3\profile\credentialstate.sqlite') was accessed and we were not expecting it. DiskReadCount: 16, DiskWriteCount: 16, DiskReadBytes: 131600, DiskWriteBytes: 655360
[task 2022-12-04T12:41:23.392Z] 12:41:23 INFO - TEST-UNEXPECTED-FAIL : xperf: File '{profile}\credentialstate.sqlite-journal' (normalized from 'C:\Users\task_167015197864427\AppData\Local\Temp\tmpjgm9vwg3\profile\credentialstate.sqlite-journal') was accessed and we were not expecting it. DiskReadCount: 4, DiskWriteCount: 26, DiskReadBytes: 32, DiskWriteBytes: 215160
[task 2022-12-04T12:41:25.702Z] 12:41:25 INFO - extending with xperf!
[task 2022-12-04T12:41:25.714Z] 12:41:25 INFO - mozcrash checking C:\Users\task_167015197864427\AppData\Local\Temp\tmpjgm9vwg3\profile\minidumps for minidumps...
[task 2022-12-04T12:41:25.714Z] 12:41:25 INFO - Detected a regression for tp5n
[task 2022-12-04T12:41:25.719Z] 12:41:25 INFO - TEST-UNEXPECTED-FAIL | tp5n | Talos has found a regression, if you have questions ask for help in irc on #perf
[task 2022-12-04T12:41:25.719Z] 12:41:25 ERROR - Traceback (most recent call last):
[task 2022-12-04T12:41:25.720Z] 12:41:25 INFO - File "Z:\task_167015197864427\build\tests\talos\talos\run_tests.py", line 363, in run_tests
[task 2022-12-04T12:41:25.720Z] 12:41:25 INFO - talos_results.add(mytest.runTest(browser_config, test))
[task 2022-12-04T12:41:25.720Z] 12:41:25 INFO - File "Z:\task_167015197864427\build\tests\talos\talos\ttest.py", line 65, in runTest
[task 2022-12-04T12:41:25.720Z] 12:41:25 INFO - return self._runTest(browser_config, test_config, setup)
[task 2022-12-04T12:41:25.720Z] 12:41:25 INFO - File "Z:\task_167015197864427\build\tests\talos\talos\ttest.py", line 258, in _runTest
[task 2022-12-04T12:41:25.721Z] 12:41:25 INFO - raise TalosRegression(
[task 2022-12-04T12:41:25.721Z] 12:41:25 INFO - talos.utils.TalosRegression: Talos has found a regression, if you have questions ask for help in irc on #perf
[task 2022-12-04T12:41:25.721Z] 12:41:25 INFO - TEST-INFO took 453359ms
[task 2022-12-04T12:41:25.721Z] 12:41:25 INFO - SUITE-END | took 453s
Updated•2 years ago
|
Component: Build Documentation → DOM: Credential Management
Product: Firefox Build System → Core
Regressed by: 1782091
Comment 1•2 years ago
|
||
:bvandersloot, since you are the author of the regressor, bug 1782091, could you take a look? Also, could you set the severity field?
For more information, please visit auto_nag documentation.
Flags: needinfo?(bvandersloot)
Keywords: regression
Assignee | ||
Comment 2•2 years ago
|
||
Looks like the IdentityCredentialPromptService was touching disk, even when FedCM was disabled. The solution here is to gate actual state management of this service on the FedCM pref until we get FedCM to release quality, tracked by Bug 1803629. I've created a patch and tested it (https://treeherder.mozilla.org/jobs?repo=try&revision=a35a25521dbe1ddc297875d1b701d45ce0fc67e1) to confirm it fixes this. I'll ship it off for review and land it before the code freeze.
Flags: needinfo?(bvandersloot)
Updated•2 years ago
|
Assignee | ||
Comment 3•2 years ago
|
||
Updated•2 years ago
|
Assignee: nobody → bvandersloot
Status: NEW → ASSIGNED
Pushed by bvandersloot@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/66537b8a33e8
Fix "xperf: File '{profile}\credentialstate.sqlite' was accessed and we were not expecting it.", r=timhuang
Updated•2 years ago
|
Severity: -- → S2
Priority: -- → P2
Comment 5•2 years ago
|
||
bugherder |
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 109 Branch
Comment 6•2 years ago
|
||
Fix verified in today's central as early beta simulation.
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•