Bug 1803960 - Fix "xperf: File '{profile}\credentialstate.sqlite' was accessed and we were not expecting it.", r=timhuang

Differential Revision: https://phabricator.services.mozilla.com/D163857